cluster/core/netpol/radarr.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: radarr
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-radarr-ingress
  namespace: radarr
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: traefik
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - protocol: TCP
      port: 7878
  - from:
    - namespaceSelector:
        matchLabels:
          ns: jellyseerr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: jellyseerr
    ports:
    - protocol: TCP
      port: 7878
  - from:
    - namespaceSelector:
        matchLabels:
          ns: uptime
      podSelector:
        matchLabels:
          app.kubernetes.io/name: uptime
    ports:
    - protocol: TCP
      port: 7878
  - from:
    - namespaceSelector:
        matchLabels:
          ns: radarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: radarr-trailers
    ports:
    - protocol: TCP
      port: 7878
  - from:
    - namespaceSelector:
        matchLabels:
          ns: prowlarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prowlarr
    ports:
    - protocol: TCP
      port: 7878
  - from:
    - namespaceSelector:
        matchLabels:
          ns: recyclarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: recyclarr
    ports:
    - protocol: TCP
      port: 7878
  - from:
    - namespaceSelector:
        matchLabels:
          ns: bazarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: bazarr
    ports:
    - protocol: TCP
      port: 7878
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-radarr-egress
  namespace: radarr
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: radarr
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: adguard
      podSelector:
        matchLabels:
          app.kubernetes.io/name: adguard-home
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.10/32
    - ipBlock:
        cidr: 192.168.0.77/32
    - ipBlock:
        cidr: 192.168.0.78/32
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: sabnzbd
      podSelector:
        matchLabels:
          app.kubernetes.io/name: sabnzbd
    ports:
    - port: 8080
      protocol: TCP
    - port: 8888
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: prowlarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prowlarr
    ports:
    - port: 9696
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: autoscan
      podSelector:
        matchLabels:
          app.kubernetes.io/name: autoscan
    ports:
    - port: 3030
      protocol: TCP
  # - to:
  #   - ipBlock:
  #       cidr: 0.0.0.0/0
  #       except:
  #       - 10.0.0.0/8
  #       - 172.16.0.0/12
  #       - 192.168.0.0/16
  #   ports:
  #   - port: 443
  #     protocol: TCP
  #   - port: 80
  #     protocol: TCP
